# benten

./: Cargo.toml  README.md
examples/layouts/: cangjie5.layout.yaml  cangjie5.layout.zm  japanese.layout.zm  kana.layout.yaml  kana.layout.zm
examples/modes/: japanese.mode.yaml
examples/tables/: cangjie5.dict  cangjie5.dict.yaml
src/benten/: Cargo.toml
src/benten-cli/: Cargo.toml
src/benten-cli/src/: main.rs
src/benten-ipc/: Cargo.toml
src/benten-ipc/src/: lib.rs
src/benten-wayland/: Cargo.toml
src/benten-wayland/src/: context.rs  lib.rs
src/benten/src/: logger.rs  main.rs
src/bentend/: Cargo.toml
src/bentend/src/: main.rs
src/libbenten/: Cargo.toml
src/libbenten/benches/: simple.rs
src/libbenten/src/: lib.rs
src/libbenten/src/methods/: mod.rs
src/libbenten/src/methods/hangul/: hangul.rs
src/libbenten/src/methods/layout/: mod.rs  parser.rs
src/libbenten/src/methods/table/: mod.rs  parser.rs
src/libbenten/src/mode/: mod.rs  parser.rs
src/libbenten/tests/: japanese.rs  shared.rs
