[package]
name = "benten-wayland"
version = "0.1.0"
edition = "2021"

[lib]
name = "benten_wayland"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
libbenten = { path = "../libbenten" }
wayland-client = "0.29.4"
wayland-protocols = { version = "0.29.4", features = ["client", "unstable_protocols"] }
zwp-virtual-keyboard = "0.2.0"
bitflags = "1.3.2"

libc = "0.2.82"
log = "0.4.14"
simplelog = "0.11.2"

mio = { version = "0.7.7", features = ["os-ext"] }
mio-timerfd = "0.2.0"