[package]
name = "libbenten"
version = "0.1.0"
edition = "2018"

[lib]
name = "benten"
path = "src/lib.rs"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
zmerald = { path="../../../zmerald" }
csv = "1.1.6"
thiserror = "1.0.30"
xdg = "2.4.0"
log = "0.4.14"
itertools = "0.10.3"
#https://crates.io/crates/ahash

[dev-dependencies]
criterion = { version = "0.3.4", features = ["html_reports"] }

[[bench]]
name = "simple"
harness = false